--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "jojoreum",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "tsc -w"
+    "compile": "tsc -w",
+    "dev": "nodemon --watch 'dist/**/*' --exec node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,8 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.10.2",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   }
 }
